--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,10 +13,7 @@
       <h2>Hello World!</h2>
       <p>Witam w formularzu, szacuneczek manualny 🎉</p>
     </div>
-    <app-form>
-    </app-form>
-    <app-employee-table>
-    </app-employee-table>
+    <router-outlet></router-outlet>
   </div>
 </main>
 
