--- a/src/app/employee-table/employee-table.component.html
+++ b/src/app/employee-table/employee-table.component.html
@@ -8,4 +8,4 @@
         <span (click)="removeUser(employee.id)">Remove</span>
     </div>
 }
-<a routerLink="/form-view" routerLinkActive="active">Dodaj pracownika</a>
+<a routerLink="/form" routerLinkActive="active">Dodaj pracownika</a>
