--- a/src/app/employee-table/employee-table.component.html
+++ b/src/app/employee-table/employee-table.component.html
@@ -1,11 +1,39 @@
-
-@for (employee of employees; track employee){
-    <div>
-        Imie: {{ employee.name }}
-        Wiek: {{ employee.age }}
-        Czy pracuje na pełny etat? {{ employee.isFullTime }}
-        Pozycja: {{ employee.position }}
-        <span (click)="removeUser(employee.id)">Remove</span>
+<div class="table">
+    <div class="intro">
+        <h3>Tabela pracowników</h3>
+        <a routerLink="/form" routerLinkActive="active">
+            <h6>Dodaj pracownika
+                <svg xmlns="http://www.w3.org/2000/svg" width="20px" viewBox="0 0 448 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path fill="#ffffff" d="M256 80c0-17.7-14.3-32-32-32s-32 14.3-32 32V224H48c-17.7 0-32 14.3-32 32s14.3 32 32 32H192V432c0 17.7 14.3 32 32 32s32-14.3 32-32V288H400c17.7 0 32-14.3 32-32s-14.3-32-32-32H256V80z"/></svg>
+            </h6>
+        </a>
     </div>
-}
-<a routerLink="/form" routerLinkActive="active">Dodaj pracownika</a>
+    <div class="table-header">
+        <div class="header-item">Imię i Nazwisko</div>
+        <div class="header-item">Wiek</div>
+        <div class="header-item">Pracuje na pełny etat</div>
+        <div class="header-item">Pozycja</div>
+        <div class="header-item">Usuń</div>
+    </div>
+    @for (employee of employees; track employee; let e = $even ){
+        <div class="row__{{e}}">
+            <div class="data">{{ employee.name }}</div>
+            <div class="data">{{ employee.age }}</div>
+            <div class="data">
+                @if (employee.isFullTime) {
+                    Tak
+                }
+                @else {
+                    Nie
+                }
+            </div>
+            <div class="data">{{ employee.position }}</div>
+            <span class="data" (click)="removeUser(employee.id)">
+                <svg class="clickable" xmlns="http://www.w3.org/2000/svg" width="18px" viewBox="0 0 448 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M135.2 17.7C140.6 6.8 151.7 0 163.8 0H284.2c12.1 0 23.2 6.8 28.6 17.7L320 32h96c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 96 0 81.7 0 64S14.3 32 32 32h96l7.2-14.3zM32 128H416V448c0 35.3-28.7 64-64 64H96c-35.3 0-64-28.7-64-64V128zm96 64c-8.8 0-16 7.2-16 16V432c0 8.8 7.2 16 16 16s16-7.2 16-16V208c0-8.8-7.2-16-16-16zm96 0c-8.8 0-16 7.2-16 16V432c0 8.8 7.2 16 16 16s16-7.2 16-16V208c0-8.8-7.2-16-16-16zm96 0c-8.8 0-16 7.2-16 16V432c0 8.8 7.2 16 16 16s16-7.2 16-16V208c0-8.8-7.2-16-16-16z"/></svg>
+            </span>
+        </div>
+    }
+</div>
+<div>
+    <!-- <a routerLink="/update" routerLinkActive="active">Edytuj pracownika</a> -->
+</div>
+
