--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,160 @@
-/* You can add global styles to this file, and also import other style files */
+@import url("https://fonts.googleapis.com/css?family=Source+Code+Pro:400,500,600,700|Source+Sans+Pro:400,600,700&display=swap");
+
+$color-form-highlight: #EEEEEE;
+$color-blue: #1a3b5d;
+
+$base-spacing-unit: 24px;
+$half-spacing-unit: calc($base-spacing-unit / 2);
+
+body {
+  background: #ddeefc;
+  font-family: "Source Sans Pro", sans-serif;
+  font-size: 16px;
+}
+* {
+  box-sizing: border-box;
+  &:focus {
+    outline: none;
+  }
+}
+
+#myForm {
+    position: relative;
+    margin-top: 40px;
+}
+
+.employeeForm {
+    background: white;
+    border: 0 none;
+    border-radius: 0px;
+    box-shadow: 0 0 15px 1px rgba(0, 0, 0, 0.4);
+    padding: 20px 30px;
+    box-sizing: border-box;
+    width: 60%;
+    max-width: 450px;
+    margin: auto;
+    margin-top: 30px;
+}
+
+button {
+    width: 100%;
+    height: 55px;
+    background: #2364d2;
+    border: none;
+    border-radius: 5px;
+    font-size: 22px;
+    font-weight: 500;
+    font-family: "Source Sans Pro", sans-serif;
+    box-shadow: 3px 10px 20px 0px rgba(35, 100, 210, 0.3);
+    color: #fff;
+    margin-top: 20px;
+    cursor: pointer;
+}
+
+.inputLabel {
+    font-size: 14px;
+    margin-top: 10px;
+    margin-bottom: 5px;
+    font-weight: 500;
+    color: $color-blue;
+    width: 100%;
+    display: block;
+    user-select: none;
+}
+.input {
+    margin-bottom: 20px;
+    border-radius: 5px;
+    box-shadow: none;
+    border: 1px solid #ced6e0;
+    transition: all 0.3s ease-in-out;
+    font-size: 50px;
+    padding: 5px 15px;
+    background: none;
+    color: $color-blue;
+    font-family: "Source Sans Pro", sans-serif;
+    &__text {
+        width: 100%;
+        height: 50px;
+    }
+    &__check {
+        width: 50px;
+        height: 50px;
+    }
+    &__select {
+        width: 100%;
+        height: 50px;
+    }
+}
+.table {
+    font-family: 'Source Sans Pro', sans-serif;
+    width: auto;
+    margin: auto;
+    max-width: 950px;
+    border: 1px solid $color-form-highlight;
+}
+
+.table-header {
+    display: flex;
+	width: auto;
+	background: #000;
+	padding: calc($half-spacing-unit * 1.5) 0;
+}
+.header-item {
+    text-transform: uppercase;
+    text-align: center;
+    color: white;
+    width: 20%;
+	text-decoration: none;
+	position: relative;
+	display: block;
+}
+
+.row {
+    &__true {
+        display:flex;
+        background-color: #fff;
+        width:100%;
+        margin-left: 0px;
+        padding: calc($half-spacing-unit * 1.5) 0;
+    }
+    &__false {
+		background: $color-form-highlight;
+        display:flex;
+        width:100%;
+        margin-left: 0px;
+        padding: calc($half-spacing-unit * 1.5) 0;
+	}
+}
+.data {
+    flex: 1 1 20%;
+    text-align: center;
+    width: 25%;
+}
+
+.intro {
+    color: #fff;
+    text-transform: uppercase;
+    display: flex;
+	width: 100%;
+	background: #000;
+	padding: calc($half-spacing-unit * 1.5) 0;
+}
+h3 {
+    margin-left: 30px;
+    width: 40%;
+}
+.intro a {
+    color:white;
+    width: 60%;
+    padding-right: 20px;
+	text-decoration: none;
+    text-align: right;
+}
+a:hover {
+    color:white;
+	text-decoration: none;
+}
+.clickable {
+    cursor: pointer;
+}
+
