--- a/src/app/employee-table/employee-table.component.html
+++ b/src/app/employee-table/employee-table.component.html
@@ -34,6 +34,6 @@
     }
 </div>
 <div>
-    <!-- <a routerLink="/update" routerLinkActive="active">Edytuj pracownika</a> -->
+    <!-- <button routerLink="/update" routerLinkActive="active">Edytuj pracownika</button> -->
 </div>
 
